<resources>

    <string name="app_name">V2FitnessTracker</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome">Welcome, user!</string>
    <string name="password_hint">Password</string>
    <string name="logo_description">Logo</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_registration">Registration</string>
    <string name="registration_notice">Please fill in with your information.</string>
    <string name="registration_username">Username:</string>
    <string name="registration_password">Password:</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="title_activity_login_test">LoginTest</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_nutrition">Nutrition</string>
    <string name="title_activity_journal">Journal</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_exercise">Exercises</string>
    <string name="navigation_nutrition">Nutrition</string>
    <string name="navigation_journal">Journal</string>
    <string name="navigation_logout">Logout</string>
    <string name="home_usernameText">Username: </string>
    <string name="home_passwordText">Password: </string>
    <string name="home_changeText">Change</string>
    <string name="whitespace_fifteen"></string>
    <string name="home_BMIText">Body Mass Index (BMI)</string>
    <string name="home_indexText">Index: </string>
    <string name="home_classificationText">Classification: </string>
    <string name="whitespace_twentyfive"></string>
    <string name="home_calculateBMI">Calculate</string>
    <string name="home_ageText">Age: </string>
    <string name="home_heightText">Height: </string>
    <string name="whitespace_five"></string>
    <string name="whitespace_seven"></string>
    <string name="home_feetText">ft.</string>
    <string name="home_inchesText">in.</string>
    <string name="home_weightText">Weight: </string>
    <string name="home_goalWeightText">Goal Weight: </string>
    <string name="home_update">Update</string>

    <string-array name="exercise_types">
        <item>Abs</item>
        <item>Biceps</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Forearm</item>
        <item>Glutes</item>
        <item>Hamstrings</item>
        <item>Lats</item>
        <item>Quads</item>
        <item>Shoulders</item>
        <item>Traps</item>
        <item>Triceps</item>
        <item>Run</item>
        <item>Other</item>
    </string-array>

    <string name="exercise_addExerciseButton">Add Exercise</string>
    <string name="exercise_header_name">Name</string>
    <string name="exercise_header_type">Type</string>
    <string name="exercise_header_sets">Sets</string>
    <string name="exercise_header_reps">Reps</string>
    <string name="nutrition_addFoodButton">Add Food</string>
    <string name="nutrition_header_name">Name</string>
    <string name="nutrition_header_amount">Amount</string>
    <string name="nutrition_header_calories">Calories</string>
    <string name="journal_hint">Write a message here...</string>
    <string name="journal_newEntry">New Entry</string>
    <string name="journal_lock">Lock</string>
    <string name="journal_clear">Clear</string>
    <string name="journal_removeButton">Remove</string>

    <string-array name="paired_devices"></string-array>

    <string name="home_bluetoothShare">Share</string>
    <string name="home_bluetoothListen">Listen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_facebook">Facebook</string>
    <string name="home_facebookShare">Facebook Share</string>
    <string name="facebook_logout">Sign Out</string>
    <string name="facebook_post">Post to Wall</string>
    <string name="facebook_clearCredentials">Clear Credentials</string>
    <string name="title_activity_view_exercise">View Exercise</string>
    <string name="title_activity_view_food">View Food</string>
    <string name="fitnessService_started">Fitness coach is now waking up...</string>
    <string name="fitnessService_stopped">Fitness coach is going back to sleep.</string>
    <string name="home_askFitnessCoach">Ask Coach</string>

</resources>