<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" 
    android:fillViewport="true">
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background">
	    
	    <!-- Header -->
	    <LinearLayout android:id="@+id/header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dip"
	        android:paddingBottom="5dip">
	    	<!-- Logo -->
	    	<include layout="@layout/logo"></include>
	    	<!-- Logo ends -->
	    </LinearLayout>
	    <!-- Header ends -->
	    
	    <!-- Footer -->
	    <LinearLayout android:id="@+id/footer"
	        android:layout_width="match_parent"
	        android:layout_height="90dip"
	        android:layout_alignParentBottom="true">
	    </LinearLayout>
	    <!-- Footer ends -->
	    
	    <!-- Login Form -->
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/header">
	    	
	        <!-- Please fill in with your information" notice -->
	    	<TextView android:layout_width="match_parent"
        	android:layout_height="match_parent"
      		android:text="@string/registration_notice"
      		android:textColor="#00FF00"/>
    	
	    	<!-- Username -->
	        <TextView android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/registration_username"
	        android:textSize="25dp"
	        android:textColor="#FF0000"/>
	    
	    	<EditText android:id="@+id/user_username"
	        android:inputType="textNoSuggestions"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:hint="@string/username_hint"
	        android:textColor="#00FF00"
	        android:textColorHint="#00FF00"
	        android:maxLength="15"/>
	    	<!-- Password -->
	    	<TextView android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/registration_password"
	        android:textSize="25dp"
	        android:textColor="#FF0000"/>
	    
	    	<EditText android:id="@+id/user_password"
	        android:inputType="textPassword"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:hint="@string/password_hint"
	        android:textColor="#00FF00"
	        android:textColorHint="#00FF00"
	        android:maxLength="15"/>
	    	<LinearLayout android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:orientation="vertical"
	    	    android:paddingTop="5dp">
		    	<RelativeLayout android:layout_width="match_parent"
		    	    android:layout_height="wrap_content">
			    	<!-- Register Button -->
			    	<Button android:id="@+id/register_button"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_marginTop="10dip"
			    	    android:text="@string/register"
			    	    android:textColor="#FF0000"
			    	    android:onClick="register"/>
		    	</RelativeLayout>
		    	<RelativeLayout android:layout_width="match_parent"
		    	    android:layout_height="wrap_content">
			    	<!-- Back Button -->
			    	<Button android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_marginTop="10dip"
			    	    android:text="@string/back"
			    	    android:textColor="#FF0000"
			    	    android:onClick="back"/>
		    	</RelativeLayout>    
    	    </LinearLayout>
	    </LinearLayout>
	    	
	</RelativeLayout>
	
</ScrollView>


