<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    
    <LinearLayout android:id="@+id/nutrition_overallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
     
        <include layout="@layout/logo"/>
       	<include layout="@layout/navigation"/>
       	
       	<Button android:layout_width="110dp"
       	    android:layout_height="30dp"
       	    android:text="@string/nutrition_addFoodButton"
       	    android:textColor="#FF0000"
       	    android:textSize="12dp"
       	    android:onClick="addRow"/>
       	
       	<LinearLayout android:id="@+id/nutrition_header"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content">
       	    
       	    <TextView android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/nutrition_header_name"
       	    android:textColor="#FFFFFF"/>
       	    
       	    <TextView android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/nutrition_header_amount"
       	    android:textColor="#FFFFFF"/>
       	    
       	    <TextView android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/nutrition_header_calories"
       	    android:textColor="#FFFFFF"/>
       	    
       	</LinearLayout>
       	
       	<TableLayout android:id="@+id/nutrition_foodLayout"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content"
       	    android:orientation="vertical">
       	    
       	</TableLayout>
       	
    </LinearLayout>
    
</ScrollView>