<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:fillViewport="true">
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#46e400">
	    <!-- Header -->
	    <LinearLayout android:id="@+id/header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@layout/header_gradient"
	        android:paddingTop="5dip"
	        android:paddingBottom="5dip">
	    	<!-- Logo -->
	    	<include layout="@layout/logo"></include>
	    	<!-- Logo ends -->
	    </LinearLayout>
	    <!-- Header ends -->
	    <!-- Footer -->
	    <LinearLayout android:id="@+id/footer"
	        android:layout_width="match_parent"
	        android:layout_height="90dip"
	        android:background="@layout/footer_gradient"
	        android:layout_alignParentBottom="true">
	    </LinearLayout>
	    <!-- Footer ends -->
	    <!-- Login Form -->
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/header">
	    	<!-- Username -->
	    	<EditText android:id="@+id/username_input" 
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:singleLine="true"
	    	    android:inputType="textNoSuggestions"
	    	    android:hint="@string/username_hint"/>
	    	<!-- Password -->
	    	<EditText android:id="@+id/password_input"
	    	    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
	    	<!-- Login Button -->
	    	<Button android:id="@+id/login_button"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:layout_marginTop="10dip"
	    	    android:text="@string/login"
	    	    android:onClick="login"/>
	    </LinearLayout>
	    
	</RelativeLayout>
	
	
</ScrollView>

